Fixed slideshow height on mobile, tested
- Removed --doc-height variable
- Added in height to be handled by Vue in tiled-slideshow
- Fixed a few layout issues in footer

--- a/src/assets/sass/critical.scss
+++ b/src/assets/sass/critical.scss
@@ -72,7 +72,6 @@
 
 #previewPlaceholderRegion {
     height: calc(100vh - 242px);
-    height: calc(var(--doc-height) - 242px);
     width: 100%;
 }
 
@@ -91,8 +90,10 @@ body.dark-mode .transitionPanel {
 {
     position: relative;
     margin: 0px auto;
+    /*
     height: calc(100vh - 242px);
     height: calc(var(--doc-height) - 242px);
+    */
 }
 
 .slideshowInnerContainer
