--- a/src/assets/sass/local.scss
+++ b/src/assets/sass/local.scss
@@ -67,7 +67,7 @@
         }
 
         #homeWorkGrid div.imageContainer {
-            max-width: calc(95% - 15px);
+            width: calc(95% - 15px);
             height: auto;
         }
     }
